# Airline-Passenger-Satisfaction

./: README.md  notebook.ipynb  pyproject.toml  training.py  vectorizer.pkl
deployment/local-deployment/: Dockerfile  README.md  predict.py  pyproject.toml  score_passenger.py
deployment/web-deployment/: README.md  app.py  pyproject.toml  scaler.pkl
